--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,19 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+*{
+    font-family: Inter, serif;
+    --primary-color: #FFFFFF;
+    --primary2-color: #363738;
+    --secondary-color: #F5F5F5;
+    --secondary1-color: #FEFAF1;
+    --secondary2-color: #DB4444;
+    --text: #FAFAFA;
+    --text1: #7D8184;
+    --text2: #000000;
+    --button: #000000;
+    --button1: #00FF66;
+    --button2: #DB4444;
+    --button2-hover: #E07575;
+    --button1-hover: #A0BCE0;
+    --ultramarine : #120A8F;
+    --desert-sand: #878681;
+    transition: 0.3s;
 }
